add FunctionInterface 4个常用函数接口的使用

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+include ':002_functioninterface'
+include ':002_functionInterface'
 include ':001_lambda'
 include ':app'
 rootProject.name = "java8Sample"
