gradle下载使用国内镜像加速

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
+include ':003_stream'
+include ':002_stream'
 include ':002_functioninterface'
 include ':002_functionInterface'
 include ':001_lambda'
