--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,10 @@ buildscript {
         kotlin_version = '1.3.72'
     }
     repositories {
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{url "https://jitpack.io"}
         google()
-        jcenter()
+//        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
@@ -18,8 +20,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         google()
-        jcenter()
+//        jcenter()
     }
 }
 
