--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    //在Android Studio 4.0中，已将 desugaring engine 扩展为能够对 Java 语言 API 的语法糖。
-    // 这意味着你现在可以在 java.util.streams 支持较旧版本的 Android 的应用程序中，包含仅在最新的Android版本中可用的标准语言API
+    //通过desugaring的过程能够支持部分Java 8 API的语法糖
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.10'
 
 }
